fixed on ios

--- a/style/index.css
+++ b/style/index.css
@@ -106,6 +106,7 @@ h6 {
 	background-color: #16072a;
 	position: relative;
 	max-width: 100vw;
+	text-rendering: optimizeLegibility;
 }
 
 .community__block {
